added venue controllers

--- a/VenuesService/appsettings.json
+++ b/VenuesService/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "VenuesContext": "Server=(localdb)\\mssqllocaldb;Database=VenuesContext-af3045f2-64a0-4420-b11a-4563f4a1ccf1;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
