Db is created and initialized

--- a/ConcertsService/appsettings.json
+++ b/ConcertsService/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConcertsContext": "Server=(localdb)\\mssqllocaldb;Database=ConcertsContext-248e545d-5c4b-44bb-a484-7c5a039f7322;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
