--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: csharp
 mono: none
 dotnet: 2.1.402
+branches:
+  only:
+    - develop
 before script:
--dotnet restore
+  - dotnet restore
 
 
