services added to gateway

--- a/Gateway/appsettings.json
+++ b/Gateway/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConcertsUrl": "https://localhost:44343/api",
+  "VenuesUrl": "https://localhost:44399/api",
+  "PerfomersUrl": "https://localhost:44309/api",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
