--- a/CommonModels/CommonModels.csproj
+++ b/CommonModels/CommonModels.csproj
@@ -8,4 +8,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="coveralls.io" Version="1.4.2" />
+  </ItemGroup>
+
 </Project>
