--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -4,5 +4,9 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+
+    "UsersDatabase": "Server=(localdb)\\mssqllocaldb;Database=DBUserss;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
