seperate db for users and apps

--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -7,6 +7,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "UsersDatabase": "Server=(localdb)\\mssqllocaldb;Database=DBUserss;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+    "UsersDB": "Server=(localdb)\\mssqllocaldb;Database=DBTokenUsers;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "AppsDB": "Server=(localdb)\\mssqllocaldb;Database=DBTokenApps;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
 }
