--- a/AuthService/appsettings.json
+++ b/AuthService/appsettings.json
@@ -10,4 +10,5 @@
     "UsersDB": "Server=(localdb)\\mssqllocaldb;Database=DBTokenUsers;Trusted_Connection=True;MultipleActiveResultSets=true",
     "AppsDB": "Server=(localdb)\\mssqllocaldb;Database=DBTokenApps;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "serverSigningPassword": "\"This is the password used for the key that will be used to sign the tokens."
 }
