added requests queue

--- a/Gateway/Gateway.csproj
+++ b/Gateway/Gateway.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="coveralls.io" Version="1.4.2" />
+    <PackageReference Include="DalSoft.Hosting.BackgroundQueue" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.4" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.6" />
